minor whitespace fix

--- a/website/ca/style.css
+++ b/website/ca/style.css
@@ -196,7 +196,7 @@ h6 {
 }
 
 .section_padding_0_50 {
-    padding-top: 20vh;
+    padding-top: 23vh;
     padding-bottom: 50px;
 }
 
